--- a/custom_components/ai_config_agent/manifest.json
+++ b/custom_components/ai_config_agent/manifest.json
@@ -1,7 +1,9 @@
 {
   "domain": "ai_config_agent",
   "name": "AI Configuration Agent",
-  "codeowners": ["@yinzara"],
+  "codeowners": [
+    "@yinzara"
+  ],
   "config_flow": true,
   "dependencies": [
     "lovelace",
@@ -17,5 +19,5 @@
     "openai==1.58.1",
     "ruamel.yaml==0.18.5"
   ],
-  "version": "0.2.0"
+  "version": "0.3.0"
 }
