--- a/ha-config-ai-agent/config.yaml
+++ b/ha-config-ai-agent/config.yaml
@@ -48,7 +48,7 @@ options:
   provider: "gemini"
   api_url: ""
   api_key: ""
-  model: "gemini-2.0-flash"
+  model: "gemini-3-flash-preview"
   log_level: "info"
   system_prompt_file: ""
   temperature: ""
@@ -59,7 +59,7 @@ schema:
   provider: list(openai|gemini|anthropic|openrouter|ollama|custom)
   api_url: url?
   api_key: password?
-  model: list(gpt-4o|gpt-4.1|gpt-4.1-mini|gpt-4-turbo|o4-mini|gemini-2.5-pro-preview-05-06|gemini-2.5-flash-preview-04-17|gemini-2.0-flash|gemini-1.5-pro|gemini-1.5-flash|claude-sonnet-4-20250514|claude-3-5-sonnet-latest|claude-3-5-haiku-latest|claude-3-opus-latest|openai/gpt-4o|anthropic/claude-3.5-sonnet|google/gemini-2.0-flash-exp:free|meta-llama/llama-3.3-70b-instruct|llama3.3|qwen2.5-coder|deepseek-r1|mistral|custom)?
+  model: list(gpt-5.2|gpt-5.2-turbo|gpt-5.2-lite|gpt-5.2-mini|gpt-5.2-premium|gemini-3-flash-preview|gemini-2.5-flash|gemini-2.5-pro-preview-05-06|gemini-2.0-flash|gemini-1.5-pro|gemini-1.5-flash|claude-sonnet-4-20250514|claude-3-5-sonnet-latest|claude-3-5-haiku-latest|claude-3-opus-latest|openai/gpt-5.2|anthropic/claude-3.5-sonnet|google/gemini-3-flash-preview|meta-llama/llama-3.3-70b-instruct|llama3.3|qwen2.5-coder|deepseek-r1|mistral|custom)?
   log_level: list(debug|info|warning|error)
   system_prompt_file: str?
   temperature: str?
