--- a/ha-config-ai-agent/requirements.txt
+++ b/ha-config-ai-agent/requirements.txt
@@ -7,6 +7,9 @@ jinja2==3.1.6
 openai-agents==0.4.2
 openai==2.6.1
 
+# Google Generative AI SDK (for native Gemini 3 support)
+google-genai==1.5.0
+
 # Configuration management
 ruamel.yaml==0.18.16
 
