--- a/ha-config-ai-agent/build.yaml
+++ b/ha-config-ai-agent/build.yaml
@@ -7,11 +7,11 @@ build_from:
   i386: "ghcr.io/home-assistant/i386-base-python:3.11-alpine3.21"
 
 labels:
-  io.hass.version: "0.9.8"
+  io.hass.version: "0.9.14"
   io.hass.type: "addon"
-  io.hass.name: "AI Configuration Agent"
+  io.hass.name: "AIassistant"
   io.hass.description: "AI-powered Home Assistant configuration assistant"
-  org.opencontainers.image.title: "AI Configuration Agent"
+  org.opencontainers.image.title: "AIassistant"
   org.opencontainers.image.description: "AI-powered Home Assistant configuration management"
   org.opencontainers.image.source: "https://github.com/yinzara/ha-config-ai-agent"
   org.opencontainers.image.licenses: "MIT"
