--- a/ha-config-ai-agent/config.yaml
+++ b/ha-config-ai-agent/config.yaml
@@ -1,6 +1,6 @@
-name: "AI Configuration Agent"
-version: "0.9.13"
-slug: "ai-config-agent"
+name: "AIassistant"
+version: "0.9.14"
+slug: "aiassistant"
 description: "AI-powered Home Assistant configuration assistant with approval workflow"
 url: "https://github.com/yinzara/ha-config-ai-agent"
 arch:
@@ -22,7 +22,7 @@ codenotary: yinzara@gmail.com
 ingress: true
 ingress_port: 8099
 panel_icon: mdi:robot-outline
-panel_title: "Config Agent"
+panel_title: "AIassistant"
 
 # Volume mappings - CRITICAL for config access
 map:
